my first own commit

--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>CSS</title>
+  <link rel="stylesheet" type="text/css" href="css/main.scss">
+</head>
+<body>
+  
+
+</body>
+</html>
+
+
+<!--
 ---
+
 layout: default
 ---
 
@@ -21,3 +36,4 @@ layout: default
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
 </div>
+-->
