landing page added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="dropdown-item" href="gallery.html">Gallery</a>
             <a class="dropdown-item" href="robot.html">Robot</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="lp.html">Landing</a>
           </div>
         </li>
         <li class="nav-item">
