landing page button change

--- a/lp.html
+++ b/lp.html
@@ -10,11 +10,11 @@
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-12 my-auto">
-            <h2>Lelum polelum</h2>
+            <h2>All your base are belong to us</h2>
           </div>
           <hr>
           <div class="col-lg-12 my-auto">
-            <a href="login.html" class="btn btn-success">dildo</a>
+            <a href="login.html" class="btn btn-success" id="engage">Engage!</a>
           </div>
         </div>
       </div>
