--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <a class="dropdown-item" href="robot.html">Robot</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="lp.html">Landing</a>
+            <a class="dropdown-item" href="./robofriends/public/index.html">Robot</a>
           </div>
         </li>
         <li class="nav-item">
